Single article page

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -13,6 +13,12 @@ hr.line-separator{
     margin-bottom: 36px;
 }
 
+hr.grey-separator{
+    border-top: 1px solid #979797;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 a.highlight{
     color: #f26624;
 }
@@ -2224,6 +2230,15 @@ input[type="text"] , textarea{
             font-weight: normal;
             color: #a2a2a2;
         }
+        ul, ol{
+            padding-left: 18px;
+            margin-bottom: 30px;
+            li{
+                font-size: 18px;
+                font-weight: normal;
+                color: #a2a2a2; 
+            }
+        }
         a{
             color: #f16624;
             text-decoration: none;
@@ -2720,4 +2735,128 @@ input[type="text"] , textarea{
             }
         }
     }
+}
+
+.single-media{
+    &.page-content{
+        p{
+            color: #505050;
+        }
+        ul, ol{
+            li{
+                color: #505050;
+            }
+        }
+    }
+}
+
+.m{
+    &-wrap{
+        display: flex;
+        box-shadow: 0 1px 12px -5px grey;
+        align-items: unset !important;
+        justify-content: unset !important;
+        width: 100%;
+        &-outer{
+            height: auto !important;
+            &.slick-slide {
+                height: auto !important; 
+                padding: 2px;
+            }
+        }
+        @media (max-width: 575px) {
+            flex-wrap: wrap;
+        }
+    }
+    &-image{
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        img{
+            width: 100%;
+            height: auto;
+        }
+        @media (max-width: 575px) {
+            width: 100%;
+        }
+    }
+    &-data{
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        padding-left: 30px;
+        padding-right: 30px;
+        position: relative;
+        justify-content: center;
+        &-title{
+            color: #4d6d9a;
+            text-transform: uppercase;
+            font-weight: 500;
+            @media (min-width: 576px) {
+                position: absolute;
+                top: 25px;
+                left: 30px;
+            }
+        }
+        @media (max-width: 575px) {
+            width: 100%;
+            padding: 25px;
+            padding-left: 15px;
+        }
+    }
+}
+
+.article-slider{
+    .slick-arrow{
+        width: 40px;
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+        background-color: transparent;
+        border: 0;
+        outline: 0;
+        &.slick-prev{
+            left: -35px;
+            background: url('../images/previous.png') ;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            @media (min-width: 1200px) {
+                left: -80px;
+            }
+        }
+        &.slick-next{
+            right: -35px;
+            background: url('../images/next.png') ;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            @media (min-width: 1200px) {
+                right: -80px;
+            }
+        }
+        i{
+            display: none;
+        }
+        &.slick-disabled{
+            display: none;
+        }
+        @media (min-width: 1200px) {
+            width: 70px;
+            height: 40px;
+        }
+    }
+}
+
+
+.article-slider .m-wrap-outer {
+    display: none;
+}
+.article-slider .m-wrap-outer:first-child {
+    display: flex;
+}
+.article-slider.slick-initialized .m-wrap-outer {
+    display: flex;
 }
