--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -126,3 +126,13 @@
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.45);
 }
+
+.article-slider .m-wrap-outer {
+    display: none;
+}
+.article-slider .m-wrap-outer:first-child {
+    display: flex;
+}
+.article-slider.slick-initialized .m-wrap-outer {
+    display: flex;
+}
