--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -31,6 +31,9 @@
     &-18{
         font-size: 18px !important;
     }
+    &-20{
+        font-size: 20px !important;
+    }
     &-22{
         font-size: 22px !important;
     }
@@ -135,4 +138,25 @@
 }
 .article-slider.slick-initialized .m-wrap-outer {
     display: flex;
+}
+
+.w-70{
+    width: 100%;
+    @media (min-width: 768px) {
+        width: 70%;
+    }
+}
+
+.w-30{
+    width: 100%;
+    @media (min-width: 768px) {
+        width: 30%;
+    }
+}
+
+.w-33{
+    width: 100%;
+    @media (min-width: 768px) {
+        width: 33.33%;
+    }
 }
