Media page fixes

--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -160,3 +160,9 @@
         width: 33.33%;
     }
 }
+
+.mb-sm-15{
+    @media (min-width: 576px) {
+        margin-bottom: 150px !important;
+    }
+}
