content width fix

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2746,6 +2746,7 @@ input[type="text"] , textarea{
 
 .single-media{
     &.page-content{
+        max-width: 100%;
         p{
             color: #505050;
             text-align: justify;
