--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2937,6 +2937,9 @@ input[type="text"] , textarea{
 }
 
 .latest-articles{
+    @media (min-width: 1300px) and (max-width: 1400px) {
+        padding: 0 70px;
+    }
     @media (max-width: 767px) {
         padding: 0 25px !important;
     }
