--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -2858,6 +2858,9 @@ input[type="text"] , textarea{
             @media (min-width: 1200px) {
                 left: -80px;
             }
+            @media (min-width: 1200px) and (max-width: 1400px) {
+                left: 0;
+            }
             @media (max-width: 800px) {
                 left: 0;
             }
@@ -2870,6 +2873,9 @@ input[type="text"] , textarea{
             background-size: contain;
             @media (min-width: 1200px) {
                 right: -80px;
+            }
+            @media (min-width: 1200px) and (max-width: 1400px) {
+                right: 0;
             }
             @media (max-width: 800px) {
                 right: 0;
@@ -2923,6 +2929,14 @@ input[type="text"] , textarea{
     }
     @media (max-width: 767px) {
         flex-wrap: wrap;
+        h1{
+            font-size: 25px !important;
+        }
+        .btn-white{
+            font-size: 16px !important;
+            min-width: auto;
+            padding: 8px 15px !important;
+        }
     }
 }
 
@@ -2985,12 +2999,12 @@ input[type="text"] , textarea{
 .page-template-template-media-resources, .single-post{
     .f-25{
         @media (max-width: 767px) {
-            font-size: 20px !important;
+            font-size: 18px !important;
         }
     }   
     h1.section-title{
         @media (max-width: 767px) {
-            font-size: 30px !important;
+            font-size: 25px !important;
         }
     }
 }
