--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -3033,3 +3033,51 @@ input[type="text"] , textarea{
 .article-slider.slick-initialized .m-wrap-outer {
     display: flex;
 }
+
+.box-shadow {
+    box-shadow: 0 2px 24px 0 rgba(206, 206, 206, 0.5);
+}
+
+.res_head {
+    font-size: 30px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #f16624;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+.res_sub {
+    font-size: 25px;
+    font-weight: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #505050;
+}
+
+.res_img {
+    min-height: 340px;
+    box-shadow: 0 2px 24px 0 rgba(206, 206, 206, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px !important;
+}
+
+.row-one{
+    .wp-block-column{
+        .wp-block-image{
+            margin-bottom: 25px !important;
+            &.feat-img{
+                img{
+                    height: 340px;
+                    object-fit: cover;
+                }
+            }
+        }
+        &.ml-15{
+            margin-left: 15px !important;
+        }
+    }
+}
