added social links

--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -3108,3 +3108,7 @@ input[type="text"] , textarea{
         margin-bottom: 15px !important;
     }
 }
+.social-icons{
+    position: absolute;
+    bottom: 10px;
+}
