first post mobile image height fix

--- a/wp-content/themes/toppeq/scss/theme/_helpers.scss
+++ b/wp-content/themes/toppeq/scss/theme/_helpers.scss
@@ -164,3 +164,9 @@
         margin-bottom: 150px !important;
     }
 }
+
+.pb-m-100{
+    @media (max-width: 575px) {
+        padding-bottom: 100%;
+    }
+}
